test/compile-fail/import-not-found.as
import not_found from "_";
