test/compile-fail/import-not-found.stderr
[0;37mtest/compile-fail/import-not-found.as:1.1-27: [0;31merror: [1;37mno module found for "_"[0m
